[add] 기본 mainpage 추가
간단한 시작 뼈대 만들기

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,9 +5,68 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
     <title>13조 프로젝트</title>
+
+    <link rel="stylesheet" href="../static/homepage.css">
 </head>
-<body>
-<button>헬로</button>
-</body>
+    <body>
+        <div class="topStyle">
+            <h1>13조 프로젝트</h1>
+        </div>
+        <div class="cardBox">
+            <div class="profileCard">
+                <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
+                     alt="btae">
+                <p>박태형</p>
+                <p>맛집 저장</p>
+                <a href="">
+                    <p>페이지 바로가기</p>
+                </a>
+            </div>
+            <div class="profileCard">
+                <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
+                     alt="btae">
+                <p>박태형</p>
+                <p>맛집 저장</p>
+                <a href="">
+                    <p>페이지 바로가기</p>
+                </a>
+            </div>
+            <div class="profileCard">
+                <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
+                     alt="btae">
+                <p>박태형</p>
+                <p>맛집 저장</p>
+                <a href="">
+                    <p>페이지 바로가기</p>
+                </a>
+            </div>
+            <div class="profileCard">
+                <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
+                     alt="btae">
+                <p>박태형</p>
+                <p>맛집 저장</p>
+                <a href="">
+                    <p>페이지 바로가기</p>
+                </a>
+            </div>
+            <div class="profileCard">
+                <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
+                     alt="btae">
+                <p>박태형</p>
+                <p>맛집 저장</p>
+                <a href="">
+                    <p>페이지 바로가기</p>
+                </a>
+            </div>
+        </div>
+    </body>
 </html>
