[add] 맛집 저장소 작성 준비
html, css, js파일 생성, homepage 링크 추가 및 flask 연결

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,7 +27,7 @@
                      alt="btae">
                 <p>박태형</p>
                 <p>맛집 저장</p>
-                <a href="">
+                <a href="food">
                     <p>페이지 바로가기</p>
                 </a>
             </div>
