[add] 맛집 저장소 공통부분 작성
맛집 저장소 공통 부분 작성

--- a/templates/food.html
+++ b/templates/food.html
@@ -14,11 +14,28 @@
             crossorigin="anonymous"></script>
 
     <title>맛집 저장소</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Jua&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../static/food.css.css">
+    <link rel="stylesheet" href="../static/allFood.css">
+    <link rel="stylesheet" href="../static/save_food.css">
 </head>
 <body>
-    <p></p>
-    </div><script src="../food.js"></script>
+    <div class="topStyle">
+        <h1>먹거리 집합소</h1>
+        <h6>나만의 먹거리 저장소</h6>
+    </div>
+    <div class="menuBox">
+        <p>menu</p>
+        <a href="javascript:void(0)" class="closebtn" onclick="openNav()">&times;</a>
+    </div>
+    <div class="detailMenu">
+        <a href="food"><p>맛집 저장하기</p></a>
+        <a href="food/list_food"><p>맛집 리스트 보기</p></a>
+        <a href="food/choose_food"><p>오늘의 추천 메뉴</p></a>
+    </div>
+    <div class="content">
+
+    </div>
+
 </body>
 </html>
