--- a/static/allFood.css
+++ b/static/allFood.css
@@ -36,14 +36,16 @@
 }
 .detailMenu {
     width: 0px;
-    /*overflow: hidden;*/
+    overflow: hidden;
     text-align: center;
     float: left;
     margin-left: 2.5%;
+    transition: 0.5s;
 }
 .detailMenu > a{
     color: #000;
     text-decoration: none;
+    transition: 0.3s;
 }
 .detailMenu > a > p{
     width: 110px;
@@ -57,7 +59,6 @@
 
 /*상세 내용*/
 .content{
-    border: 1px solid #000;
     margin-right: 200px;
     margin-left: 200px;
 }
