--- a/static/save_food.css
+++ b/static/save_food.css
@@ -10,3 +10,23 @@
 .input-group{
     margin-bottom: 10px;
 }
+.address{
+    border-top: 1px solid #000;
+    margin-top: 50px;
+}
+.address > table {
+    width: 100%;
+}
+table, tr, td{
+    /*border: 1px solid #000;*/
+}
+.address > table tr {
+    border-top: 1px solid #000;
+}
+.address > table tr td:last-child{
+    border-right: none ;
+}
+.address > table tr td{
+    border-right: 1px solid #000;
+    padding: 5px 10px;
+}
