[update] 맛집 리스트 기본 뼈대 작성
기본 뼈대 작성

--- a/templates/show_food.html
+++ b/templates/show_food.html
@@ -20,21 +20,126 @@
     <link rel="stylesheet" href="../static/show_food.css">
 </head>
 <body>
-    <div class="topStyle">
-        <h1>먹거리 집합소</h1>
-        <h6>맛집 리스트</h6>
+<div class="topStyle">
+    <h1>먹거리 집합소</h1>
+    <h6>맛집 리스트</h6>
+</div>
+<div class="menuBox">
+    <p>menu</p>
+    <a href="javascript:void(0)" class="closebtn" id="sideMenu" onclick="openNav()">&#9776;</a>
+</div>
+<div id="detailMenu" class="detailMenu">
+    <a href="food"><p>맛집 저장하기</p></a>
+    <a href="food/list_food"><p>맛집 리스트 보기</p></a>
+    <a href="food/choose_food"><p>오늘의 추천 메뉴</p></a>
+</div>
+<div id="content" class="content">
+    <div class="card" style="width: 18rem;">
+        <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">우판등심 <span>양식</span></h5>
+            <p class="card-text">코멘트입니다</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">주소</li>
+            <li class="list-group-item">평점</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">검색 보러가기</a>
+            <a href="#" class="card-link">정보 보러가기</a>
+        </div>
     </div>
-    <div class="menuBox">
-        <p>menu</p>
-        <a href="javascript:void(0)" class="closebtn" id="sideMenu" onclick="openNav()">&#9776;</a>
+    <div class="card" style="width: 18rem;">
+        <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">우판등심 <span>양식</span></h5>
+            <p class="card-text">코멘트입니다</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">주소</li>
+            <li class="list-group-item">평점</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">검색 보러가기</a>
+            <a href="#" class="card-link">정보 보러가기</a>
+        </div>
     </div>
-    <div id="detailMenu" class="detailMenu">
-        <a href="food"><p>맛집 저장하기</p></a>
-        <a href="food/list_food"><p>맛집 리스트 보기</p></a>
-        <a href="food/choose_food"><p>오늘의 추천 메뉴</p></a>
+    <div class="card" style="width: 18rem;">
+        <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">우판등심 <span>양식</span></h5>
+            <p class="card-text">코멘트입니다</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">주소</li>
+            <li class="list-group-item">평점</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">검색 보러가기</a>
+            <a href="#" class="card-link">정보 보러가기</a>
+        </div>
     </div>
-    <div id="content" class="content">
+    <div class="card" style="width: 18rem;">
+        <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">우판등심 <span>양식</span></h5>
+            <p class="card-text">코멘트입니다</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">주소</li>
+            <li class="list-group-item">평점</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">검색 보러가기</a>
+            <a href="#" class="card-link">정보 보러가기</a>
+        </div>
     </div>
+    <div class="card" style="width: 18rem;">
+        <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">우판등심 <span>양식</span></h5>
+            <p class="card-text">코멘트입니다</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">주소</li>
+            <li class="list-group-item">평점</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">검색 보러가기</a>
+            <a href="#" class="card-link">정보 보러가기</a>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">우판등심 <span>양식</span></h5>
+            <p class="card-text">코멘트입니다</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">주소</li>
+            <li class="list-group-item">평점</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">검색 보러가기</a>
+            <a href="#" class="card-link">정보 보러가기</a>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">우판등심 <span>양식</span></h5>
+            <p class="card-text">코멘트입니다</p>
+        </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">주소</li>
+            <li class="list-group-item">평점</li>
+        </ul>
+        <div class="card-body">
+            <a href="#" class="card-link">검색 보러가기</a>
+            <a href="#" class="card-link">정보 보러가기</a>
+        </div>
+    </div>
+</div>
 <script src="../static/food.js"></script>
 <script src="../static/show_food.js"></script>
 </body>
