[수정] 코드뭉치 날라간 부분 재 작성
삭제된 코드 다시 작성

--- a/templates/food.html
+++ b/templates/food.html
@@ -37,8 +37,8 @@
         <div class="saveBox">
             <form action="#">
             <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">URL</span>
-                <input type="text" class="form-control" placeholder="Naver - url" aria-label="Username"
+                <span class="input-group-text" id="basic-addon1">맛집 이름</span>
+                <input type="text" id="url" class="form-control" placeholder="네이버에 등록된 상호명만 가능" aria-label="Username"
                        aria-describedby="basic-addon1" required>
             </div>
 
