[수정] 종류값 숫자에서 글로 변경
value값 지정에 실수있어 수정

--- a/templates/food.html
+++ b/templates/food.html
@@ -47,15 +47,15 @@
                 <label class="input-group-text" for="inputGroupSelect01">분류</label>
                 <select class="form-select" id="inputGroupSelect01" required>
                     <option selected>Choose...</option>
-                    <option value="1">한식</option>
-                    <option value="2">양식</option>
-                    <option value="3">중식</option>
-                    <option value="4">일식</option>
-                    <option value="5">디저트</option>
-                    <option value="6">카페</option>
-                    <option value="7">패스트푸드</option>
-                    <option value="8">동남아</option>
-                    <option value="9">기타</option>
+                    <option value="한식">한식</option>
+                    <option value="양식">양식</option>
+                    <option value="중식">중식</option>
+                    <option value="일식">일식</option>
+                    <option value="디저트">디저트</option>
+                    <option value="카페">카페</option>
+                    <option value="패스트푸드">패스트푸드</option>
+                    <option value="동남아">동남아</option>
+                    <option value="기타">기타</option>
 
                 </select>
                 <label class="input-group-text" for="inputGroupSelect02">평점</label>
