[수정] 맛집 리스트 페이지 병합 후 수정
action링크 삭제 css 수정 , empty로 없어지던 th태그 추가

--- a/static/save_food.css
+++ b/static/save_food.css
@@ -17,16 +17,13 @@
 .address > table {
     width: 100%;
 }
-table, tr, td{
-    /*border: 1px solid #000;*/
-}
 .address > table tr {
     border-top: 1px solid #000;
 }
 .address > table tr td:last-child{
     border-right: none ;
 }
-.address > table tr td{
+.address > table tr td,th{
     border-right: 1px solid #000;
     padding: 5px 10px;
 }
