--- a/templates/food.html
+++ b/templates/food.html
@@ -73,7 +73,7 @@
                 <textarea id="comment" class="form-control" aria-label="With textarea"></textarea>
             </div>
             <div class="d-grid gap-2 col-12 mx-auto">
-                <button class="btn btn-primary" type="submit" onclick="posting()">주소 찾기</button>
+                <button class="btn btn-primary" onclick="posting()">주소 찾기</button>
             </div>
         </form>
         <div id="address" class="address">
