--- a/templates/choose_food.html
+++ b/templates/choose_food.html
@@ -44,13 +44,13 @@
         <div class="input-group mb-3">
             <span class="input-group-text">시</span>
             <input id="si" type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default" placeholder="전체 시까지">
+                   aria-describedby="inputGroup-sizing-default" placeholder="예)수원">
             <span class="input-group-text">구</span>
             <input id="ku" type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default" placeholder="전체 구/군">
+                   aria-describedby="inputGroup-sizing-default" placeholder="예)권선구">
             <span class="input-group-text">동</span>
             <input id="dong" type="text" class="form-control" aria-label="Sizing example input"
-                   aria-describedby="inputGroup-sizing-default" placeholder="전체 읍/면/동">
+                   aria-describedby="inputGroup-sizing-default" placeholder="예)구운동">
         </div>
         <div class="input-group mb-3">
             <label class="input-group-text" for="inputGroupSelect02">종류</label>
@@ -75,7 +75,7 @@
                 <option value="4">👍👍👍👍</option>
                 <option value="5">👍👍👍👍👍</option>
             </select>
-            <button type="button" class="btn btn-outline-primary">추천 받기</button>
+            <button type="button" class="btn btn-outline-primary" onclick="choosing();">추천 받기</button>
         </div>
 
         <div>
@@ -100,6 +100,7 @@
         </div>
         <p>검색 결과가 없으면 추천 결과에 이미지가 보이지 않습니다.</p>
         <p>필터에 입력하지 않은 부분은 전체로 간주하고 추천합니다</p>
+        <p>주소를 2개 이상 작성 할 경우 모두 해당되는 주소만 추천합니다 </p>
     </div>
     <div class="chooseOption"></div>
     <div class="chooseFood"></div>
