--- a/templates/choose_food.html
+++ b/templates/choose_food.html
@@ -78,25 +78,8 @@
             <button type="button" class="btn btn-outline-primary" onclick="choosing();">추천 받기</button>
         </div>
 
-        <div>
-            <h1>추천 결과</h1>
-            <div class="card" style="width: 18rem;">
-                <img src="https://cdn.pixabay.com/photo/2018/06/13/18/20/waves-3473335__480.jpg" class="card-img-top"
-                     alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">${name} <span class="${color_class(option)}">${option}</span></h5>
-                    <p class="card-text">${comment}</p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">${address}</li>
-                    <li class="list-group-item">${star}</li>
-                </ul>
-                <div class="card-body">
-                    <a href="https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=${name}"
-                       class="card-link">검색 보러가기</a>
-                    <a href="#" class="card-link">정보 보러가기</a>
-                </div>
-            </div>
+        <div id="showCard">
+
         </div>
         <p>검색 결과가 없으면 추천 결과에 이미지가 보이지 않습니다.</p>
         <p>필터에 입력하지 않은 부분은 전체로 간주하고 추천합니다</p>
