[수정] 이름 수정

--- a/templates/choose_food.html
+++ b/templates/choose_food.html
@@ -36,7 +36,6 @@
 <div id="content" class="content">
     <div class="selectMenu">
         <button>맛집 리스트 추천</button>
-        <button>음식 분류 추천</button>
         <button>음식 종류 추천</button>
     </div>
     <div class="chooseList">
@@ -85,10 +84,9 @@
         <p>필터에 입력하지 않은 부분은 전체로 간주하고 추천합니다</p>
         <p>주소를 2개 이상 작성 할 경우 모두 해당되는 주소만 추천합니다 </p>
     </div>
-    <div class="chooseOption"></div>
     <div class="chooseFood"></div>
 </div>
 <script src="../static/food.js"></script>
-<script src="../static/choose_food.js"></script>
+<script src="../static/choose_list.js"></script>
 </body>
 </html>
