[수정] 메뉴 링크 수정

--- a/templates/show_food.html
+++ b/templates/show_food.html
@@ -29,9 +29,9 @@
     <a href="javascript:void(0)" class="closebtn" id="sideMenu" onclick="openNav()">&#9776;</a>
 </div>
 <div id="detailMenu" class="detailMenu">
-    <a href="food"><p>맛집 저장하기</p></a>
-    <a href="food/list_food"><p>맛집 리스트 보기</p></a>
-    <a href="food/choose_food"><p>오늘의 추천 메뉴</p></a>
+    <a href="/food"><p>맛집 저장하기</p></a>
+    <a href="/food/list_food"><p>맛집 리스트 보기</p></a>
+    <a href="/food/choose_food"><p>오늘의 추천 메뉴</p></a>
 </div>
 <div id="content" class="content">
 </div>
