[수정] js 추가 및 button onclick 추가
html에 js링크 및 js에서 append하던 html에 button태그 안에 onclick 추가

--- a/templates/choose_food.html
+++ b/templates/choose_food.html
@@ -83,5 +83,6 @@
 </div>
 <script src="../static/food.js"></script>
 <script src="../static/choose_list.js"></script>
+<script src="../static/show_Naver_Blog.js"></script>
 </body>
 </html>
