--- a/templates/show_food.html
+++ b/templates/show_food.html
@@ -37,5 +37,6 @@
 </div>
 <script src="../static/food.js"></script>
 <script src="../static/show_food.js"></script>
+<script src="../static/show_Naver_Blog.js"></script>
 </body>
 </html>
