--- a/templates/choose_food.html
+++ b/templates/choose_food.html
@@ -81,6 +81,8 @@
         <p>주소를 2개 이상 작성 할 경우 모두 해당되는 주소만 추천합니다 </p>
     </div>
 </div>
+<div id="blog_show">
+</div>
 <script src="../static/food.js"></script>
 <script src="../static/choose_list.js"></script>
 <script src="../static/show_Naver_Blog.js"></script>
