--- a/templates/show_food.html
+++ b/templates/show_food.html
@@ -35,6 +35,8 @@
 </div>
 <div id="content" class="content">
 </div>
+<div id="blog_show">
+</div>
 <script src="../static/food.js"></script>
 <script src="../static/show_food.js"></script>
 <script src="../static/show_Naver_Blog.js"></script>
