--- a/static/choose_food.css
+++ b/static/choose_food.css
@@ -10,7 +10,10 @@
 .choose_btn{
     border: 5px solid #000;
 }
-
+.content  img{
+    width: 100%;
+    height: 150px;
+}
 /*맛집 리스트 카드*/
 .card-title > span{
     font-size: 13px;
