--- a/static/show_food.css
+++ b/static/show_food.css
@@ -3,6 +3,10 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.content  img{
+    width: 100%;
+    height: 150px;
+}
 .card-title > span{
     font-size: 13px;
     float: right;
