--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,27 +34,27 @@
             <div class="profileCard">
                 <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
                      alt="btae">
-                <p>박태형</p>
-                <p>맛집 저장</p>
-                <a href="">
+                <p>이윤진</p>
+                <p>로드</p>
+                <a href="road">
                     <p>페이지 바로가기</p>
                 </a>
             </div>
             <div class="profileCard">
                 <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
                      alt="btae">
-                <p>박태형</p>
-                <p>맛집 저장</p>
-                <a href="">
+                <p>조한울</p>
+                <p>골프</p>
+                <a href="golf">
                     <p>페이지 바로가기</p>
                 </a>
             </div>
             <div class="profileCard">
                 <img src="http://rgo4.com/files/attach/images/2681740/206/988/011/4d530532c3a11c3a981b453e99343bc7.jpeg"
                      alt="btae">
-                <p>박태형</p>
-                <p>맛집 저장</p>
-                <a href="">
+                <p>장세화</p>
+                <p>사과농장</p>
+                <a href="applefarm">
                     <p>페이지 바로가기</p>
                 </a>
             </div>
