--- a/static/homepage.css
+++ b/static/homepage.css
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 40px;
+    flex-wrap: wrap;
 }
 .profileCard{
     border: 1px solid #000;
